Update Info message on Overview page

--- a/4.0-prerelease/index.html
+++ b/4.0-prerelease/index.html
@@ -584,8 +584,11 @@
 
 <div class="admonition info">
 <p class="admonition-title">Info</p>
+<p>We are excited to share with you this prerelease page that details the new functionalities and changes that will be introduced in the next version of the .NDE file format (version 4.0). This major update is scheduled for release around November this year. </p>
+<p>Version 4.0 will pave the way for supporting Eddy Current modality and advanced ultrasonic functionalities such as FMC, HMC, and PWI. The new data structure is designed to seamlessly adapt and accommodate future requirements or needs. We developed this new version with <strong>versatility and simplicity</strong> in mind, catering to both the simplest and most complex use cases.   </p>
+<p>Please note that this new version will introduce <strong>breaking changes</strong> which you should consider for your future developments. </p>
 <p>This is a preliminar version of .NDE 4.0 documentation solely intended to inform the user on upcoming updates. Changes and updates can still be made, especially regarding semantics. Do not use the information contained on this page as an official release. If you are not yet using the .NDE format for custom applications, we recommend waiting for the official release to be published. </p>
-<p>This version of the documentation is a living document that was last updated on <strong>June 10, 2024</strong>. See the <a href="history/">history page</a> for more details.</p>
+<p>This version of the documentation is a living document that was last updated on <strong>June 11, 2024</strong>. See the <a href="history/">history page</a> for more details.</p>
 <p>To communicate with the development team for support, to provide feedback or to be added to our mailing list for updates, please reach out to <a href="mailto:nde_support@evidentscientific.com">nde_support@evidentscientific.com</a>.</p>
 </div>
 <p>The .NDE file format is designed for storage of nondestructive testing (NDT) data. It is platform-independent and modality-agnostic. 
