Update pre-release page (typos and example files names)

--- a/4.0-prerelease/examples/index.html
+++ b/4.0-prerelease/examples/index.html
@@ -627,7 +627,7 @@
 <tr>
 <td>ManualWeldUT.nde</td>
 <td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Weld/ManualWeldUT.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Weld/ManualWeldUT.nde">View</a></td>
-<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldUT.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldUT.nde">View</a></td>
+<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldUT-4.0.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldUT-4.0.nde">View</a></td>
 </tr>
 </tbody>
 </table>
@@ -646,7 +646,7 @@
 <tr>
 <td>ManualWeldPA.nde</td>
 <td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Weld/ManualWeldPA.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Weld/ManualWeldPA.nde">View</a></td>
-<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldPA.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldPA.nde">View</a></td>
+<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldPA-4.0.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/ManualWeldPA-4.0.nde">View</a></td>
 </tr>
 </tbody>
 </table>
@@ -665,7 +665,7 @@
 <tr>
 <td>RollerFORM.nde</td>
 <td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Mapping/RollerFORM.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Mapping/RollerFORM.nde">View</a></td>
-<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/RollerFORM.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/RollerFORM.nde">View</a></td>
+<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/RollerFORM-4.0.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/RollerFORM-4.0.nde">View</a></td>
 </tr>
 </tbody>
 </table>
@@ -683,7 +683,7 @@
 <tr>
 <td>TFM_Raster.nde</td>
 <td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Mapping/TFM_Raster.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/3.3/General+Mapping/TFM_Raster.nde">View</a></td>
-<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/TFM_Raster.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/TFM_Raster.nde">View</a></td>
+<td><a href="https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/TFM_Raster-4.0.nde">Download</a> - <a href="https://myhdf5.hdfgroup.org/view?url=https://nde-public-files.s3.ca-central-1.amazonaws.com/4.0/pre-release/TFM_Raster-4.0.nde">View</a></td>
 </tr>
 </tbody>
 </table>
