--- a/4.0-prerelease/faq/index.html
+++ b/4.0-prerelease/faq/index.html
@@ -528,7 +528,7 @@
 </details>
 <details class="question">
 <summary>Will Evident charge its customers to access their data and read .NDE files in the future?</summary>
-<p><strong>No</strong>. The .NDE file format is built on an open-source mindset and technical foundations (such as <a href="https://www.hdfgroup.org/">HDF5</a> and <a href="https://www.json.org/">JSON</a>). Therefore, access to the data stored in .NDE files will always be free and open (with the exception of the private section of the file under "/Applications" which is not documented nor standardized). Our users own their data and should be free to use it as they want.</p>
+<p><strong>No</strong>. The .NDE file format is built on an open-source mindset and technical foundations (such as <a href="https://www.hdfgroup.org/">HDF5</a> and <a href="https://www.json.org/">JSON</a>). Therefore, access to the data stored in .NDE files will always be free and open (with the exception of the private section of the file under "/Private" which is not documented nor standardized). Our users own their data and should be free to use it as they want.</p>
 </details>
 
 
