--- a/4.0-prerelease/transitioning-3.3-4.0/upgrade-json-setup/index.html
+++ b/4.0-prerelease/transitioning-3.3-4.0/upgrade-json-setup/index.html
@@ -1685,7 +1685,7 @@
 </tr>
 </tbody>
 </table>
-<p>Additionnaly, please note that some irrelevant parameters associated with the instrument configuration were removed: </p>
+<p>Additionally, please note that some irrelevant parameters associated with the instrument configuration were removed: </p>
 <ul>
 <li>from the <strong>gates</strong> array: <strong>produceCscanData</strong>, <strong>peakDetection</strong> and <strong>timeSelection</strong></li>
 <li>from the <strong>tcg</strong> object (inside the <strong>beams</strong> array): <strong>enabled</strong></li>
@@ -2039,7 +2039,7 @@
 </tr>
 </tbody>
 </table>
-<p>Additionnaly, please note that some irrelevant parameters associated with the instrument configuration were removed: </p>
+<p>Additionally, please note that some irrelevant parameters associated with the instrument configuration were removed: </p>
 <ul>
 <li>from the <strong>gates</strong> array: <strong>produceCscanData</strong>, <strong>peakDetection</strong> and <strong>timeSelection</strong></li>
 <li>from the <strong>tcg</strong> object: <strong>enabled</strong></li>
