--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -39,7 +39,7 @@
 										<img src="dist/images/lock_open_75dp_FFFFFF.svg" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title mt-24">No proprietary software</h4>
-                                    <p class="text-sm mb-0 textwhite">Access your data with standard and open source tools. No SDK or API required. </p>
+                                    <p class="text-sm mb-0 textwhite">Access your inspection data with standard and open source tools. No SDK or API required. </p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing" style="visibility: visible;">
