--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -19,7 +19,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">An Open File Format for the NDE Community</h1>
-	                        <p class="hero-paragraph textwhite">Leverage your inspection data and develop your own applications. <b>Version 4.0 just got released</b> 🚀  </p>
+	                        <p class="hero-paragraph textwhite">Leverage your inspection data and develop your own applications. <b>Version 4.0 is now available! </b> 🚀  </p>
 	                        <div class="hero-cta"><a class="button button-primary" href="./getting-started/">Getting started</a><a class="button" href="./examples/">examples</a></div>
 						</div>
                         <div class="hero-copy">
@@ -39,7 +39,7 @@
 										<img src="dist/images/lock_open_75dp_FFFFFF.svg" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title mt-24">No proprietary software</h4>
-                                    <p class="text-sm mb-0 textwhite">Access your inspection data with standard and open source tools. No SDK or API required. </p>
+                                    <p class="text-sm mb-0 textwhite">Access your inspection data with standard and open-source tools. No SDK or API required. </p>
                                 </div>
                             </div>
 							<div class="feature text-center is-revealing" style="visibility: visible;">
@@ -48,7 +48,7 @@
 										<img src="dist/images/money_off_75dp_FFFFFF.svg" alt="Feature 02">
                                     </div>
                                     <h4 class="feature-title mt-24">Free of charge</h4>
-                                    <p class="text-sm mb-0 textwhite">You can't be charged for an open-source based format. Ready for compliance with EU Data Act.</p>
+                                    <p class="text-sm mb-0 textwhite">An entirely open-source-based format, .nde will always be free to use, ensuring compliance with the EU Data Act.</p>
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing" style="visibility: visible;">
@@ -57,7 +57,7 @@
 										<img src="dist/images/fact_check_75dp_FFFFFF.svg" alt="Feature 03">
                                     </div>
                                     <h4 class="feature-title mt-24">Standardized</h4>
-                                    <p class="text-sm mb-0 textwhite">.NDE File Specifications are openly documented and ressources available on this page and GitHub repository.</p>
+                                    <p class="text-sm mb-0 textwhite">NDE file specifications are openly documented, with resources available on this page and on our GitHub repository.</p>
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                     <div class="pricing-inner section-inner">
                         <div class="pricing-header text-center">
                             <h2 class="section-title mt-0">Open to collaboration</h2>
-                            <p class="section-paragraph mb-0 textwhite">You would like to collaborate with us for new functionnalities, modalities and improvement?</p>
+                            <p class="section-paragraph mb-0 textwhite">Would you like to collaborate with us on new functionalities, modalities, and improvements?</p>
                         </div>
                         <br>
 						<div class="pricing-tables-wrap">
