--- a/site/overrides/home.html
+++ b/site/overrides/home.html
@@ -19,7 +19,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">An Open File Format for the NDE Community</h1>
-	                        <p class="hero-paragraph textwhite">Leverage your inspection data and develop your own applications. <b>Version 4.0 is now available! </b> 🚀  </p>
+	                        <p class="hero-paragraph textwhite">Leverage your inspection data and develop your own applications. <b><a href="./versioning/changelog/#4.1.0">Version 4.1</a></b> is now available.</p>
 	                        <div class="hero-cta"><a class="button button-primary" href="./getting-started/">Getting started</a><a class="button" href="./examples/">examples</a></div>
 						</div>
                         <div class="hero-copy">
