--- a/site/overrides/main.html
+++ b/site/overrides/main.html
@@ -5,7 +5,7 @@
   .md-banner {background-color: rgb(255, 199, 44);}
   .md-banner {color: rgb(0, 0, 0);}
 </style>
-🚀 Version 4.1 was just released, bringing new features! Explore the updates on our <a href="/versioning/changelog/#4.1.0" style="color: rgb(0, 0, 0);">
+🚀 Version 4.1 was just released, bringing new features! Explore the updates on our <a href="https://ndeformat.com/4.1/versioning/changelog/#4.1.0" style="color: rgb(0, 0, 0);">
   <strong>changelog page</strong>.
 </a>
 {% endblock %}
